<resources>
    <string name="app_name">Week3</string>
    <string name="c_constraintlayout">C ConstraintLayout</string>
    <string name="constraintlayout">Без ConstraintLayout</string>
    <string name="compose">Compose</string>



    <string name="facebook">Facebook</string>
    <string name="entry">Телефон или электронный адрес</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="forget">Забыли пароль?</string>


    <string name="telegram">Telegram</string>
    <string name="username">@99Ivan999</string>



    <string name="calculator">Calculator</string>
    <string name="_789">789</string>
    <string name="_56">56</string>
    <string name="_845">845</string>
    <string name="percent">%</string>
    <string name="clear">C</string>
    <string name="bracket">( )</string>
    <string name="division">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiplication">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtraction">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="plus_minus">+/-</string>
    <string name="zero">0</string>
    <string name="comma">,</string>
    <string name="equals">=</string>

    <string name="music">Music</string>
    <string name="playing_now">Сейчас играет</string>
    <string name="music_for_sex">Музыка для секса</string>
    <string name="angel_feat_julie_elven">Angel (feat. Julie Elven)</string>
    <string name="r_armando_morabito">R. Armando Morabito</string>
    <string name="time_start">0:00</string>
    <string name="tine_finish">5:27</string>

    <string name="title_activity_facebook_compose">FacebookComposeActivity</string>
    <string name="IvanIvanov">Иван Иванов</string>
    <string name="online">online</string>
    <string name="account">Account</string>
    <string name="phone">+7 (999) 999-99-99</string>
    <string name="number_hint">Tap to change phone number</string>
    <string name="username_hint">Username</string>
    <string name="status">Солнце не ждет тепла - оно светит и..</string>
    <string name="bio">Bio</string>
    <string name="settings">Settings</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="chat_folders">Chat Folders</string>
    <string name="devices">Devices</string>
    <string name="notifications_and_sounds">Notifications and Sounds</string>
</resources>