<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="250dp"
            android:paddingTop="40dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/_789"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/plus"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#68b31a"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/number_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/_56"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="36sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingStart="325dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/_845"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/grey_200"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/image_clock"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"
            android:foreground="@drawable/ic_baseline_time"
            android:foregroundGravity="center_vertical|center_horizontal"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <View
            android:id="@+id/image_ruler"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:foreground="@drawable/ic_baseline_straighten"
            android:foregroundGravity="center_vertical|center_horizontal"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <View
            android:id="@+id/image_calculator"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="8dp"
            android:foreground="@drawable/ic_baseline_calculate_24"
            android:foregroundGravity="center_vertical|center_horizontal"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <View
            android:id="@+id/image_delete"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginStart="120dp"
            android:layout_marginBottom="8dp"
            android:foreground="@drawable/ic_baseline_backspace"
            android:foregroundGravity="center_vertical|center_horizontal"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:background="@color/grey_500"
        tools:ignore="MissingConstraints" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="-10dp"
        android:columnCount="4"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_c"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/clear"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#D50000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button_seven"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_bracket"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/bracket"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#68B31A"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_percent"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/percent"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#68B31A"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button_nine"
            app:layout_constraintStart_toEndOf="@+id/button_bracket" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_division"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/division"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#68B31A"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_seven"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/seven"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button_four"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_eight"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/eight"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_nine"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/nine"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_multiplication"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/multiplication"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#68B31A"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_four"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/four"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_five"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/five"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_six"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/six"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_subtraction"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/subtraction"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#68B31A"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_one"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/one"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_two"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/two"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_three"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/three"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_plus"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/plus"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#68B31A"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_plus_minus"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/plus_minus"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_zero"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/zero"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="24sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_comma"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/grey"
            android:text="@string/comma"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_equals"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#68B31A"
            android:text="@string/equals"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </GridLayout>
</LinearLayout>