<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelegramActivity2"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#5A8FBB"
        android:orientation="horizontal">

        <Toolbar
            android:id="@+id/toolbar_back"
            android:layout_width="41dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:foreground="@drawable/ic_baseline_arrow_back"
            android:foregroundGravity="center_vertical"
            android:gravity="center_horizontal" />

        <Toolbar
            android:id="@+id/toolbar_qr_code"
            android:layout_width="41dp"
            android:layout_height="56dp"
            android:layout_marginStart="230dp"
            android:layout_marginTop="5dp"
            android:foreground="@drawable/ic_baseline_qr_code"
            android:foregroundGravity="center_vertical"
            android:gravity="center_horizontal" />

        <Toolbar
            android:id="@+id/toolbar_search"
            android:layout_width="41dp"
            android:layout_height="56dp"
            android:layout_marginTop="5dp"
            android:foreground="@drawable/ic_baseline_search"
            android:foregroundGravity="center_vertical"
            android:gravity="center_horizontal" />

        <Toolbar
            android:id="@+id/toolbar_more"
            android:layout_width="41dp"
            android:layout_height="56dp"
            android:layout_marginTop="5dp"
            android:foreground="@drawable/ic_baseline_more_vert"
            android:foregroundGravity="center_vertical"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#5A8FBB"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/image_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_button"
            android:src="@drawable/ic_baseline_emoji" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/IvanIvanov"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/text_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/online"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_photo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="-35dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/grey"
        android:foreground="@drawable/ic_baseline_add_photo"
        android:foregroundGravity="center|clip_vertical"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/text_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/account"
        android:textColor="#5A8FBB"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_number_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/number_hint"
        android:textColor="@color/grey_200"
        android:textSize="16sp" />

    <View
        android:id="@+id/view_line_one"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/grey_500" />

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_username_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/username_hint"
        android:textColor="@color/grey_200"
        android:textSize="16sp" />

    <View
        android:id="@+id/view_line_two"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/grey_500" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_baseline_wb_sunny_24" />

    <TextView
        android:id="@+id/text_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/bio"
        android:textColor="@color/grey_200"
        android:textSize="16sp" />

    <View
        android:id="@+id/view_separation"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey_500"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/settings"
        android:textColor="#5A8FBB"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/notifications_line"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/image_notification"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:foreground="@drawable/ic_baseline_notifications" />

        <TextView
            android:id="@+id/text_notification"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:text="@string/notifications_and_sounds"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/image_security"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:foreground="@drawable/ic_baseline_lock" />

        <TextView
            android:id="@+id/text_security"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:text="@string/privacy_and_security"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:id="@+id/view_one"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="5dp"
        android:background="@color/grey_500" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/image_data"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:foreground="@drawable/ic_baseline_data_usage_24" />

        <TextView
            android:id="@+id/text_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:text="@string/data_and_storage"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/image_chat"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:foreground="@drawable/ic_baseline_chat_bubble_24" />

        <TextView
            android:id="@+id/text_chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:text="@string/chat_settings"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:id="@+id/view_data"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="5dp"
        android:background="@color/grey_500" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/image_folder"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:foreground="@drawable/ic_baseline_folder" />

        <TextView
            android:id="@+id/text_folders"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:text="@string/chat_folders"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/image_device"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:foreground="@drawable/ic_baseline_devices" />

        <TextView
            android:id="@+id/text_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:text="@string/devices"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>